# sciops

./: .pre-commit-config.yaml  README.md  code_artifactory_domain_policy.json  justfile  pyproject.toml
.github/workflows/: ci.yml  linting.yaml  linting.yml  publish.yml  tests.yml
dev/: format.py  ruff.py
inference/: pyproject.toml
inference/src/cognism_sciops/inference/: service.py
inference/tests/: test_service.py
postprocessor/: pyproject.toml
postprocessor/src/cognism_sciops/postprocessor/: pipeline.py
preprocessor/: pyproject.toml
preprocessor/src/cognism_sciops/preprocessor/: pipeline.py
src/inference/: pyproject.toml
src/inference/src/cognism_sciops/inference/: service.py
src/inference/src/cognism_sciops/inference/cache/: utils.py
src/inference/src/cognism_sciops/inference/service/: pipeline.py
src/inference/tests/: test_service.py
src/postprocessor/: pyproject.toml
src/postprocessor/src/cognism_sciops/postprocessor/: pipeline.py
src/postprocessor/tests/: test_postprocessor.py
src/preprocessor/: pyproject.toml
src/preprocessor/src/cognism_sciops/preprocessor/: pipeline.py
src/preprocessor/tests/: test_preprocessor.py
src/signatures/: pyproject.toml
src/signatures/src/cognism_sciops/signatures/: __init__.py  signature.py
