# Root-level pyproject.toml for sciops monorepo
[project]
name = "sciops"
requires-python = ">=3.12"
version = "0.0.0"
keywords = ["sciops", "ai"]
dependencies = [
    "inference", # namespace package
    "postprocessor", # namespace package
    "preprocessor", # namespace package
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
   { include-group = "lint" },
   { include-group = "pytest" },
]
lint = [
    "ruff==0.15.5",
    "ty==0.0.24",
]
pytest = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
managed = true
package = false # the project itself is not a package

[tool.uv.sources]
inference = { workspace = true }
postprocessor = { workspace = true }
preprocessor = { workspace = true }

[tool.uv.workspace]
members = ["src/*"]  # wildcards are supported

[tool.ruff]
# Maximum line length
line-length = 100
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint]
preview = true
# Select rules to check
select = ["E", "F", "W", "C", "I"]  # Errors, F-strings, Warnings, Complexity, Imports

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
include = [
    "src/**/src",
]

[tool.ty.environment]
python-platform = "all"

[tool.pytest.ini_options]
testpaths = ["src/**/tests"]
