# Root-level pyproject.toml for sciops monorepo
[project]
name = "sciops"
requires-python = ">=3.12"
version = "0.0.0"
keywords = ["sciops", "ai"]
dependencies = [
    "inference", # namespace package
    "postprocessor", # namespace package
    "preprocessor", # namespace package
]

[tool.uv.sources]
# namespace packages go here
inference = { workspace = true }
postprocessor = { workspace = true }
preprocessor = { workspace = true }

[tool.uv]
managed = true
package = false # the project itself is not a package

[tool.uv.workspace]
members = ["src/*"]  # wildcards are supported

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
   { include-group = "lint" },
   { include-group = "pytest" },
   { include-group = "typos" },
]
lint = [
    "ruff==0.15.5",
    "ty==0.0.24",
]
pytest = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
typos = [
    "typos>=1.44.0",
]

[tool.ruff]
# Maximum line length
line-length = 100
target-version = "py312"
extend-include = ["*.ipynb"]

[tool.ruff.format]
preview = true
docstring-code-format = true

[tool.ruff.lint]
preview = true
# Select rules to check
select = ["E", "F", "W", "C", "I"]  # Errors, F-strings, Warnings, Complexity, Imports

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
include = [
    "src/**/src",
    "dev/"
]

[tool.ty.environment]
python-platform = "all"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Use importlib mode for pytest
addopts = "--cov=src --cov-fail-under=70 --import-mode=importlib"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
omit = ["*/__init__.py", "*/tests/*"]
