# Root-level pyproject.toml for sciops monorepo
[project]
name = "sciops"
version = "0.0.0"
description = "A set of science packages"
requires-python = ">=3.12"
keywords = ["sciops", "machine learning"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "inference", # namespace package
    "postprocessor", # namespace package
    "preprocessor", # namespace package
]

[tool.uv.sources]
# namespace packages go here
inference = { workspace = true }
postprocessor = { workspace = true }
preprocessor = { workspace = true }

[tool.uv]
managed = true
package = false # the project itself is not a package

[tool.uv.workspace]
members = ["src/*"]  # wildcards are supported

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
   { include-group = "lint" },
   { include-group = "pytest" },
]
lint = [
    "ruff==0.15.5",
    "ty==0.0.24",
]
pytest = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
# Maximum line length
line-length = 100
target-version = "py312"
src = ["src/**/src", "src/**/tests", "dev"]
extend-include = ["*.ipynb"]

[tool.ruff.format]
preview = true
docstring-code-format = true
quote-style = "double"

[tool.ruff.lint]
preview = true
# Select rules to check
select = ["E", "F", "W", "C", "I"]
ignore = ["E302"] # let Black handle spacing

[tool.ty.rules]
# This is required because the project itself is not a package
unresolved-import = "ignore"

[tool.ty.src]
include = [
    "src/**/src",
    "dev"
]

[tool.ty.environment]
python-platform = "all"

[tool.pytest.ini_options]
testpaths = ["tests"]
# Use importlib mode for pytest
addopts = "--cov=src --cov-fail-under=70 --import-mode=importlib"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
omit = ["*/__init__.py", "*/tests/*"]

[[tool.uv.index]]
name = "aws-code-artifactory"
url = "https://cognism-321640139933.d.codeartifact.eu-west-1.amazonaws.com/pypi/Sciops/simple/"
publish-url = "https://cognism-321640139933.d.codeartifact.eu-west-1.amazonaws.com/pypi/Sciops/"
