[project]
name = "cognism-sciops-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
]


[tool.setuptools.packages.find]
where = ["src"]
include = ["cognism_sciops.inference*"]
