[project]
name = "cognism-sciops-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests", "tests.*"]
include = ["cognism_sciops.inference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
pytest = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
test = [
  { include-group = "pytest" },
]
