[project]
name = "inference"
version = "0.6.0"
description = "sciops inference package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cognism_sciops"
namespace = true
source-exclude = ["tests/**"]
