[project]
name = "signatures"
version = "0.1.0"
description = "sciops signatures package"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cognism_sciops"
namespace = true
source-exclude = ["tests/**"]
